# cpp-mcp-sdk

./: .gitignore  CMakeLists.txt  README.md
build-ninja/: CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  install_manifest.txt
build-ninja/Testing/Temporary/: CTestCostData.txt
build-ninja/examples/: cmake_install.cmake
build-ninja/install/include/mcp/: mcp.hpp  server.hpp  transport.hpp  types.hpp
build-ninja/install/lib/cmake/mcp-cpp-sdk/: mcp-cpp-sdk-config.cmake  mcp-cpp-targets-debug.cmake
build-ninja/tests/: CTestTestfile.cmake  cmake_install.cmake
cmake/: mcp-cpp-sdk-config.cmake.in
examples/: CMakeLists.txt  calculator_server.cpp
include/mcp/: client.hpp  mcp.hpp  server.hpp  stdio_transport.hpp  transport.hpp  types.hpp
src/: client.cpp  server.cpp  stdio_transport.cpp
tests/: CMakeLists.txt  sdk_tests.cpp
